--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BVG Transportation from HF Office</title>
+  <title>BVG Transportation from HF Berlin Office</title>
   <meta name="description"
-    content="Lists the departure times of different transportation options from around HF Berlin office.">
+    content="Lists the departure times of bus and tram lines next to the Hellofresh Berlin office.">
   <meta name="author" content="Burak Karakan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
