Replaced backend to use my own backend.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
   </footer>
 
   <script>
-    const tramDepartureUrl = 'https://1.bvg.transport.rest/stations/900000110022/departures?duration=30';
+    // const tramDepartureUrl = 'https://1.bvg.transport.rest/stations/900000110022/departures?duration=30';
+    const tramDepartureUrl = 'https://bvg-rest-api.karakanb.now.sh/stations/900000110022/departures?duration=30';
 
     (function () {
       run();
