--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="author" content="Burak Karakan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 
   <link rel="icon" type="image/png" href="images/favicon.png">
   <style>
@@ -23,6 +23,10 @@
 
     footer {
       padding: 24px 0;
+    }
+
+    table {
+      border-collapse: collapse;
     }
 
     #main-title {
@@ -117,7 +121,7 @@
 
     (function () {
       run();
-      setInterval(run, 10 * 1000);
+      // setInterval(run, 10 * 1000);
     })();
 
     function run() {
